crates/icydb-core/tests/ui/sanitize_module_private.stderr
error[E0603]: module `sanitize` is private
 --> tests/ui/sanitize_module_private.rs:1:26
  |
1 | use icydb_core::visitor::sanitize::SanitizeVisitor;
  |                          ^^^^^^^^ private module
  |
note: the module `sanitize` is defined here
 --> src/visitor/mod.rs
  |
  | pub(crate) mod sanitize;
  | ^^^^^^^^^^^^^^^^^^^^^^^
